--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=2628000, immutable"
+          "value": "max-age=0, s-maxage=604800"
         }
       ]
     }
